feat: better structuring and handling of jokes service
